@@ -1,3 +1,7 @@
+2003-01-06  Vince Darley <vincentdarley@sourceforge.net>
+	* library/ftpvfs.tcl: allow 'file mtime' to set the modified
+	time of a file, if the ftp package supports it.
+	
 2002-12-24  Vince Darley <vincentdarley@sourceforge.net>
 	* library/ftpvfs.tcl: set the 'size' element in stat calls.
 	(Bug reported on comp.lang.tcl).
